fixed the spacing on the home page

--- a/css/nav_bar.css
+++ b/css/nav_bar.css
@@ -8,8 +8,8 @@
     display:inline-block;
     padding-left:30px;
     padding-right: 30px;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-top: 30px;
+    padding-bottom: 30px;
     margin: auto;
     font-size: 25px;
     text-decoration: none;
